# Raspisanie

./: .env.prod.example  .gitignore  LICENSE  Makefile  README.md  SETUP.md  check_group_enrollments.py  check_resources.py  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  login_test.json  test_daily_generation.py  test_final_algorithm.py  test_teacher.json
backend/: .dockerignore  .env.example  Dockerfile  add_data_for_mgtu.py  add_test_data.py  alembic.ini  check_orgs.py  check_table.py  create_tables.py  create_test_account.py  create_test_data.py  debug_generation.py  entrypoint.sh  fix_enrollments.py  fix_enum_values.py  fix_password.py  fix_unit_column.py  init_db.py  init_db_and_seed.py  pyproject.toml  test_enrollments.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_unified_tables.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  academic.py  educational.py  facilities.py  organization.py  scheduling.py  user.py
backend/app/repositories/: base.py  lesson.py  organization.py  user.py
backend/app/routers/: academic_real.py  auth.py  educational_real.py  facilities_real.py  generation.py  lessons.py  organizations.py  reports.py  scheduling.py  users.py
backend/app/schemas/: __init__.py  academic.py  auth.py  educational.py  facilities.py  generation.py  lessons.py  organization.py  scheduling.py  user.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_generation.py
frontend/: Dockerfile  (+7 more)
(+208 files in other folders)
